--- a/app.json
+++ b/app.json
@@ -1,9 +1,15 @@
 {
   "expo": {
-    "name": "trace-trip",
+    "name": "TraceTrip",
     "slug": "trace-trip",
     "version": "1.0.0",
     "orientation": "portrait",
+    "icon": "./assets/logo.png",
+    "splash": {
+      "image": "./assets/logo.png",
+      "resizeMode": "contain",
+      "backgroundColor": "#1E40AF"
+    },
     "scheme": "tracetrip",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
@@ -16,17 +22,24 @@
       "package": "com.tracetrip.app",
       "versionCode": 1,
       "adaptiveIcon": {
-        "foregroundImage": "./assets/images/adaptive-icon.png",
+        "foregroundImage": "./assets/logo.png",
         "backgroundColor": "#1E40AF"
-      }
+      },
+      "permissions": [
+        "android.permission.RECORD_AUDIO",
+        "android.permission.MODIFY_AUDIO_SETTINGS",
+        "android.permission.INTERNET"
+      ]
     },
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.tracetrip.app",
+      "icon": "./assets/logo.png"
     },
     "web": {
       "bundler": "metro",
       "output": "single",
-      "favicon": "./assets/images/favicon.png"
+      "favicon": "./assets/logo.png"
     },
     "plugins": [
       "expo-router",
@@ -36,6 +49,12 @@
     ],
     "experiments": {
       "typedRoutes": true
+    },
+    "extra": {
+      "router": {},
+      "eas": {
+        "projectId": "0a48f39d-b656-4ba1-bf5c-aacfddaff5f7"
+      }
     }
   }
 }
