--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "dev": "EXPO_NO_TELEMETRY=1 expo start",
     "build:web": "expo export --platform web",
-    "lint": "expo lint"
+    "lint": "expo lint",
+    "android": "expo run:android",
+    "ios": "expo run:ios"
   },
   "dependencies": {
     "@expo-google-fonts/inter": "^0.4.1",
@@ -17,6 +19,7 @@
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/native": "^7.1.6",
     "@react-navigation/stack": "^7.4.5",
+    "date-fns": "^4.1.0",
     "expo": "~53.0.0",
     "expo-audio": "~0.4.8",
     "expo-av": "^15.1.7",
@@ -60,6 +63,7 @@
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/react": "~19.0.10",
+    "eas-cli": "^16.18.0",
     "eslint": "^9.0.0",
     "eslint-config-expo": "~9.2.0",
     "expo-cli": "^6.3.12",
