--- a/android/build.gradle
+++ b/android/build.gradle
@@ -12,15 +12,6 @@ buildscript {
   }
 }
 
-// Define as versões do SDK
-ext {
-  buildToolsVersion = "35.0.0"
-  minSdkVersion = 24
-  compileSdkVersion = 35
-  targetSdkVersion = 35
-  ndkVersion = "27.1.12297006"
-}
-
 def reactNativeAndroidDir = new File(
   providers.exec {
     workingDir(rootDir)
@@ -32,6 +23,7 @@ def reactNativeAndroidDir = new File(
 allprojects {
   repositories {
     maven {
+      // All of React Native (JS, Obj-C sources, Android binaries) is installed from npm
       url(reactNativeAndroidDir)
     }
 
