--- a/app.json
+++ b/app.json
@@ -4,7 +4,7 @@
     "slug": "trace-trip",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/logo.png",
+    "icon": "./assets/icone_t.png",
     "splash": {
       "image": "./assets/logo.png",
       "resizeMode": "contain",
@@ -20,9 +20,9 @@
     },
     "android": {
       "package": "com.tracetrip.app",
-      "versionCode": 1,
+      "versionCode": 2,
       "adaptiveIcon": {
-        "foregroundImage": "./assets/logo.png",
+        "foregroundImage": "./assets/icone_t.png",
         "backgroundColor": "#1E40AF"
       },
       "permissions": [
@@ -34,18 +34,19 @@
     "ios": {
       "supportsTablet": true,
       "bundleIdentifier": "com.tracetrip.app",
-      "icon": "./assets/logo.png"
+      "icon": "./assets/icone_t.png"
     },
     "web": {
       "bundler": "metro",
       "output": "single",
-      "favicon": "./assets/logo.png"
+      "favicon": "./assets/icone_t.png"
     },
     "plugins": [
       "expo-router",
       "expo-font",
       "expo-web-browser",
-      "expo-audio"
+      "expo-audio",
+      "expo-secure-store"
     ],
     "experiments": {
       "typedRoutes": true
