--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
     "@react-navigation/native": "^7.1.6",
     "@react-navigation/stack": "^7.4.5",
     "date-fns": "^4.1.0",
-    "expo": "~53.0.0",
-    "expo-audio": "~0.4.8",
+    "expo": "53.0.22",
+    "expo-audio": "~0.4.9",
     "expo-av": "^15.1.7",
     "expo-blur": "~14.1.3",
     "expo-camera": "^16.1.11",
@@ -33,12 +33,12 @@
     "expo-linear-gradient": "~14.1.3",
     "expo-linking": "~7.1.3",
     "expo-location": "^18.1.6",
-    "expo-router": "~5.1.4",
-    "expo-secure-store": "^14.2.3",
+    "expo-router": "~5.1.5",
+    "expo-secure-store": "~14.2.4",
     "expo-splash-screen": "~0.30.6",
     "expo-status-bar": "~2.2.2",
     "expo-symbols": "~0.4.3",
-    "expo-system-ui": "~5.0.5",
+    "expo-system-ui": "~5.0.11",
     "expo-web-browser": "~14.2.0",
     "lucide-react-native": "^0.475.0",
     "phosphor-react-native": "^3.0.0",
@@ -48,7 +48,6 @@
     "react-native": "0.79.5",
     "react-native-calendars": "^1.1308.0",
     "react-native-gesture-handler": "~2.24.0",
-    "react-native-image-manipulator": "^1.0.6",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
@@ -67,6 +66,8 @@
     "eslint": "^9.0.0",
     "eslint-config-expo": "~9.2.0",
     "expo-cli": "^6.3.12",
+    "metro": "^0.82.5",
+    "metro-core": "^0.82.5",
     "typescript": "~5.8.3"
   }
 }
