--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "trace-trip",
   "main": "expo-router/entry",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "private": true,
   "scripts": {
     "dev": "EXPO_NO_TELEMETRY=1 expo start",
@@ -15,14 +15,17 @@
     "@expo/vector-icons": "^14.1.0",
     "@hookform/resolvers": "^5.2.1",
     "@lucide/lab": "^0.1.2",
+    "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-native-community/datetimepicker": "8.4.1",
+    "@react-native-community/netinfo": "^11.4.1",
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/native": "^7.1.6",
     "@react-navigation/stack": "^7.4.5",
     "date-fns": "^4.1.0",
-    "expo": "53.0.22",
+    "expo": "~53.0.23",
     "expo-audio": "~0.4.9",
     "expo-av": "^15.1.7",
+    "expo-background-fetch": "~13.1.6",
     "expo-blur": "~14.1.3",
     "expo-camera": "^16.1.11",
     "expo-constants": "~17.1.3",
@@ -33,19 +36,22 @@
     "expo-linear-gradient": "~14.1.3",
     "expo-linking": "~7.1.3",
     "expo-location": "^18.1.6",
-    "expo-router": "~5.1.5",
+    "expo-network": "~7.1.5",
+    "expo-router": "~5.1.7",
     "expo-secure-store": "~14.2.4",
     "expo-splash-screen": "~0.30.6",
+    "expo-sqlite": "~15.2.14",
     "expo-status-bar": "~2.2.2",
     "expo-symbols": "~0.4.3",
     "expo-system-ui": "~5.0.11",
+    "expo-task-manager": "~13.1.6",
     "expo-web-browser": "~14.2.0",
     "lucide-react-native": "^0.475.0",
     "phosphor-react-native": "^3.0.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-hook-form": "^7.62.0",
-    "react-native": "0.79.5",
+    "react-native": "0.79.6",
     "react-native-calendars": "^1.1308.0",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-reanimated": "~3.17.4",
