--- a/eas.json
+++ b/eas.json
@@ -45,6 +45,14 @@
       "env": {
         "EXPO_PUBLIC_API_BASE_URL": "https://tripapi.traceai.com.br"
       }
+    },
+    "dev-local": {
+      "android": {
+        "buildType": "apk"
+      },
+      "env": {
+        "EXPO_PUBLIC_API_BASE_URL": "http://192.168.0.103:3002"
+      }
     }
   },
   "submit": {
