--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "expo-image-picker": "^16.1.4",
     "expo-linear-gradient": "~14.1.3",
     "expo-linking": "~7.1.3",
-    "expo-location": "^18.1.6",
+    "expo-location": "~18.1.6",
     "expo-network": "~7.1.5",
     "expo-router": "~5.1.7",
     "expo-secure-store": "~14.2.4",
@@ -54,6 +54,7 @@
     "react-native": "0.79.6",
     "react-native-calendars": "^1.1308.0",
     "react-native-gesture-handler": "~2.24.0",
+    "react-native-maps": "^1.26.0",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
@@ -61,7 +62,7 @@
     "react-native-toast-message": "^2.3.3",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "^0.20.0",
-    "react-native-webview": "13.13.5",
+    "react-native-webview": "^13.13.5",
     "zod": "^4.0.15",
     "zustand": "^5.0.7"
   },
