--- a/app.json
+++ b/app.json
@@ -33,22 +33,43 @@
         "android.permission.ACCESS_COARSE_LOCATION",
         "android.permission.ACCESS_BACKGROUND_LOCATION",
         "android.permission.FOREGROUND_SERVICE",
-        "android.permission.FOREGROUND_SERVICE_LOCATION",
         "android.permission.WAKE_LOCK",
         "android.permission.RECEIVE_BOOT_COMPLETED",
         "android.permission.POST_NOTIFICATIONS"
       ],
+      "foregroundServiceType": [
+        "location"
+      ],
+      "foregroundService": {
+        "notificationTitle": "TraceTrip Rastreamento",
+        "notificationBody": "Rastreando sua rota em segundo plano",
+        "notificationColor": "#1E40AF"
+      },
       "intentFilters": [
         {
           "action": "android.intent.action.MAIN",
-          "category": ["android.intent.category.LAUNCHER"]
+          "category": [
+            "android.intent.category.LAUNCHER"
+          ]
         }
       ]
     },
     "ios": {
       "supportsTablet": true,
       "bundleIdentifier": "com.tracetrip.app",
-      "icon": "./assets/icone_t.png"
+      "icon": "./assets/icone_t.png",
+      "infoPlist": {
+        "UIBackgroundModes": [
+          "remote-notification",
+          "location"
+        ],
+        "NSLocationAlwaysAndWhenInUseUsageDescription": "Este aplicativo precisa acessar sua localização para rastreamento de viagem.",
+        "NSLocationAlwaysUsageDescription": "Este aplicativo precisa acessar sua localização em background para rastreamento contínuo.",
+        "NSLocationWhenInUseUsageDescription": "Este aplicativo precisa acessar sua localização para rastreamento de viagem."
+      },
+      "entitlements": {
+        "aps-environment": "production"
+      }
     },
     "web": {
       "bundler": "metro",
@@ -64,16 +85,21 @@
       [
         "expo-location",
         {
-          "locationAlwaysAndWhenInUsePermission": "Este aplicativo precisa acessar sua localização para rastreamento de viagem.",
-          "locationAlwaysPermission": "Este aplicativo precisa acessar sua localização em background para rastreamento contínuo.",
-          "locationWhenInUsePermission": "Este aplicativo precisa acessar sua localização para rastreamento de viagem.",
+          "locationAlwaysAndWhenInUsePermission": "O TraceTrip precisa da sua localização mesmo com o app fechado para rastrear sua rota de viagem.",
+          "locationAlwaysPermission": "O TraceTrip precisa da sua localização em background para rastreamento contínuo da sua rota de viagem.",
+          "locationWhenInUsePermission": "O TraceTrip precisa da sua localização para rastreamento de viagem.",
           "isIosBackgroundLocationEnabled": true,
           "isAndroidBackgroundLocationEnabled": true,
-          "isAndroidForegroundServiceEnabled": true,
-          "androidForegroundServicePermission": "android.permission.FOREGROUND_SERVICE_LOCATION"
+          "isAndroidForegroundServiceEnabled": true
         }
       ],
-      "expo-sqlite"
+      "expo-sqlite",
+      [
+        "onesignal-expo-plugin",
+        {
+          "mode": "production"
+        }
+      ]
     ],
     "experiments": {
       "typedRoutes": true
@@ -82,7 +108,8 @@
       "router": {},
       "eas": {
         "projectId": "0a48f39d-b656-4ba1-bf5c-aacfddaff5f7"
-      }
+      },
+      "oneSignalAppId": "13e1b3b0-0f04-4cab-a143-0542306e1b2f"
     }
   }
 }
