--- a/ios/Podfile
+++ b/ios/Podfile
@@ -62,3 +62,8 @@ target 'TraceTrip' do
     end
   end
 end
+
+target 'OneSignalNotificationServiceExtension' do
+  pod 'OneSignalXCFramework', '>= 5.0', '< 6.0'
+  use_frameworks! :linkage => podfile_properties['ios.useFrameworks'].to_sym if podfile_properties['ios.useFrameworks']
+end
