--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     "build:web": "expo export --platform web",
     "lint": "expo lint",
     "android": "expo run:android",
-    "ios": "expo run:ios"
+    "ios": "expo run:ios",
+    "build:apk:debug": "cd android && ./gradlew assembleDebug",
+    "build:apk:release": "cd android && ./gradlew assembleRelease",
+    "build:apk:clean": "cd android && ./gradlew clean assembleDebug",
+    "install:apk": "adb install -r android/app/build/outputs/apk/debug/app-debug.apk"
   },
   "dependencies": {
     "@expo-google-fonts/inter": "^0.4.1",
@@ -29,6 +33,7 @@
     "expo-blur": "~14.1.3",
     "expo-camera": "^16.1.11",
     "expo-constants": "~17.1.3",
+    "expo-dev-client": "~5.2.4",
     "expo-file-system": "^18.1.11",
     "expo-font": "~13.3.2",
     "expo-haptics": "^14.1.4",
@@ -47,6 +52,7 @@
     "expo-task-manager": "~13.1.6",
     "expo-web-browser": "~14.2.0",
     "lucide-react-native": "^0.475.0",
+    "onesignal-expo-plugin": "^2.0.3",
     "phosphor-react-native": "^3.0.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
@@ -55,6 +61,7 @@
     "react-native-calendars": "^1.1308.0",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-maps": "^1.26.0",
+    "react-native-onesignal": "^5.2.14",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
