--- a/eas.json
+++ b/eas.json
@@ -19,6 +19,9 @@
     "production": {
       "ios": {
         "resourceClass": "m-medium"
+      },
+      "env": {
+        "EXPO_PUBLIC_API_BASE_URL": "https://tripapi.traceai.com.br"
       }
     },
     "apk": {
